<resources>
    <string name="app_name">jazireKetab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_login_enter">برای ادامه کار وارد حساب کاربری خود شوید یا ثبت نام کنید</string>
    <string name="loginOrsignup">ورود | ثبت نام</string>
    <string name="login">ورود</string>
    <string name="login_dialog">شماره موبایل خود را وارد کنید</string>
    <string name="enter_to_jazireKetab">ورود به جزیره کتاب</string>
    <string name="privacy_and_policy">با ورود به جزیره کتاب، شرایط و قوانین استفاده از خدمات را می‌پذیرید</string>
    <string name="enter_code">کد ارسال شده را وارد نمایید</string>
    <string name="confirm_code">تایید کد</string>
    <string name="signup">ثبت نام</string>
    <string name="signup_dialog">مشخصات زیر را وارد کنید</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="sended_code">کد ارسال شده</string>
    <string name="signup_to_jazireKetab">ثبت نام در جزیره‌کتاب</string>
    <string name="my_comments">نظرات من</string>
    <string name="help_support">راهنمایی و پشتیبانی</string>
    <string name="booked_books">کتاب های نشان شده من</string>
    <string name="about_us">درباره جزیره کتاب</string>
    <string name="exist">خروج</string>
    <string name="no_comment_found">هیچی پیدا نشد!</string>
    <string name="nashr_test">نشر نون</string>
    <string name="Athur_test">تونی فاگیولی</string>
    <string name="name_test">ملیونی برای یک نفر</string>
    <string name="test_comment">کتابی زیبا بود ، بهتر بود از نشر طلوع میزاشتید و قیمت کتاب هم بالا بود و قیمت کمتر بهتر است و اگر میشه امکان مارک کردن هم اضافه کنید خلاصه دمتون گرم زحمت کشیدید این کتاب زیبا رو گزاشتید مننو از زحماتتون وبه همه دوسداران کتاب پیشنهاد میکنم که این کتاب زیبارو بخونن</string>
    <string name="text_in_reading">در حال مطالعه</string>
    <string name="sample_text">نمونه متن</string>
    <string name="sample_rat">4.8</string>
    <string name="button_update">آپدیت کن</string>
    <string name="cats">دسته‌بندی</string>
    <string name="home">خانه</string>
    <string name="search">جستجو</string>
    <string name="mybooks_title">کتباخانه من</string>
    <string name="myprfoile">حساب کاربری</string>
    <string name="about_book">درباره کتاب</string>
    <string name="test_bout_boook">ssssss</string>
    <string name="detail_book">جزئیات</string>
    <string name="comment">نظرات ثبت شده</string>
</resources>