<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/mhome"
        android:title="@string/home"
        />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/list"
        android:title="@string/cats"
        />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/mglass"
        android:title="@string/search"
        />
    <item
        android:id="@+id/myBooksFragment"
        android:icon="@drawable/books"
        android:title="@string/mybooks_title"
        />
    <item
        android:id="@+id/enterLoginFragment"
        android:icon="@drawable/prof"
        android:title="@string/myprfoile"
        />
</menu>