<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.signup.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/logo_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


    <LinearLayout
        android:padding="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.095">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/_16sdp"
            android:text="@string/signup"
            android:fontFamily="@font/sans_bold"/>

        <TextView
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorBlack"
            android:textSize="@dimen/_11sdp"
            android:text="@string/signup_dialog"
            android:fontFamily="@font/sans"/>

        <com.google.android.material.textfield.TextInputEditText
            android:padding="@dimen/_10sdp"
            android:hint="@string/name_family"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans_medium"
            android:textColor="@color/textColorBlack"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/editText_phone_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/edittext_background"
            tools:ignore="KeyboardInaccessibleWidget" />

        <com.google.android.material.textfield.TextInputEditText
            android:padding="@dimen/_10sdp"
            android:hint="@string/sended_code"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans_medium"
            android:textColor="@color/textColorBlack"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/editText_confirm_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/edittext_background"
            tools:ignore="KeyboardInaccessibleWidget" />




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttton_signup_jazireketab"
            android:text="@string/signup_to_jazireKetab"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.295" />






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>