<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layoutDirection="rtl"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_90sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        >
        <ImageView
            android:id="@+id/imagesaved_books"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/testbook1"/>

    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4sdp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_test"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/sans_medium"
            android:textColor="@color/textColorBlack"
            />
        <TextView
            android:id="@+id/athor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Athur_test"
            android:textSize="@dimen/_7sdp"
            android:fontFamily="@font/sans_medium"
            android:textColor="@color/textColorGray"
            />
        <TextView
            android:id="@+id/nashr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nashr_test"
            android:textSize="@dimen/_7sdp"
            android:fontFamily="@font/sans_medium"
            android:textColor="@color/textColorGray"
            />

       <LinearLayout
           android:gravity="end"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <RatingBar
               android:id="@+id/ratting"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:numStars="5"
               android:isIndicator="true"
               style="@style/Widget.AppCompat.RatingBar.Small"/>
           <TextView
               android:gravity="end"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="37500 ت"
               android:textSize="@dimen/_7sdp"
               android:fontFamily="@font/sans_medium"
               android:textColor="@color/textColorGray"
               />
       </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>