<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="@dimen/_12sdp"
    android:orientation="vertical"
    tools:context=".ui.fragments.profile.main.ProfileMainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="محمد حسین چوازی"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/sans"
        android:textColor="@color/textColorBlack"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="09165497603"
        android:textSize="@dimen/_11sdp"
        android:fontFamily="@font/sans"
        android:textColor="@color/textColorGray"/>
    <View
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/comment"/>
        <TextView
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center|start"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_comments"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/textColorBlack"/>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:orientation="horizontal"
           >
           <androidx.appcompat.widget.AppCompatImageView
               android:layout_weight="1"
               android:layout_gravity="center_vertical"
               android:layout_width="@dimen/_15sdp"
               android:layout_height="@dimen/_15sdp"
               android:src="@drawable/ic_back"/>
       </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/que"/>
        <TextView
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/help_support"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/textColorBlack"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_back"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/bookmark"/>
        <TextView
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booked_books"

            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/textColorBlack"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_back"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/logo_green"/>
        <TextView
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center|start"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/textColorBlack"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_back"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder"
        />
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/log_out"/>
        <TextView
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exist"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/sans"
            android:textColor="@color/textColorBlack"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_back"/>
        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>